--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,85 @@
-.App {
+@import url("https://fonts.googleapis.com/css2?family=Antic+Slab&display=swap");
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  background-color: #f473b9;
   text-align: center;
+  font-family: "Antic Slab", serif;
+  color: #fff;
+  letter-spacing: 1.3px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App {
+  width: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
+}
+.header {
+  margin-top: 30px;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
 }
-
-.App-link {
-  color: #61dafb;
+.imgtitle {
+  width: 70px;
+  height: 70px;
+  margin-left: 20px;
 }
+.container {
+  width: 80%;
+  margin: 20px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.image {
+  background-color: #0e3eda;
+}
+p {
+  background-color: #0e3eda;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  padding: 20px 40px;
+}
+img {
+  width: 200px;
+  height: 200px;
+  border-radius: 20px;
+}
+.card {
+  padding: 20px;
+  background-color: #0e3eda;
+  margin: 20px;
+  width: 300px;
+  height: 300px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.card:hover {
+  transform: scale(1.1);
+  opacity: 0.85;
+}
+button {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  font-family: "Antic Slab", serif;
+  padding: 20px 40px;
+  color: #fff;
+  letter-spacing: 1.3px;
+  font-size: 20px;
+  cursor: pointer;
+  border: none;
+  background-color: #0e3eda;
+  border-radius: 20px;
+  transition: 0.3s;
+}
+button:hover {
+  background-color: #fff;
+  color: #0e3eda;
 }
